--- a/package.json
+++ b/package.json
@@ -31,12 +31,18 @@
   "devDependencies": {
     "@semantic-release/changelog": "3.0.1",
     "@semantic-release/git": "7.0.6",
+    "bdd-stdin": "0.2.0",
+    "chai": "4.2.0",
+    "chai-fs": "2.0.0",
     "codecov": "3.1.0",
     "conventional-changelog-metahub": "2.0.2",
     "cz-conventional-changelog": "2.1.0",
+    "diff": "4.0.1",
+    "dirty-chai": "2.0.1",
     "mocha": "5.2.0",
     "nyc": "13.1.0",
     "request-promise-native": "1.0.5",
+    "rimraf": "2.6.3",
     "semantic-release": "15.13.1",
     "standard": "12.0.1"
   },
