--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "request-promise-native": "1.0.5",
     "rimraf": "2.6.3",
     "semantic-release": "15.13.1",
-    "standard": "12.0.1"
+    "standard": "12.0.1",
+    "std-mocks": "1.0.1"
   },
   "scripts": {
     "lint": "standard",
