--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "cz-conventional-changelog": "2.1.0",
     "diff": "4.0.1",
     "dirty-chai": "2.0.1",
+    "fs-extra": "7.0.1",
     "mocha": "5.2.0",
     "nyc": "13.1.0",
     "request-promise-native": "1.0.5",
