feat: Factored out Profile
Added update tests

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "ansi-colors": "3.2.3",
     "commander": "2.19.0",
     "enquirer": "2.3.0",
-    "fs-extra": "7.0.1"
+    "fs-extra": "7.0.1",
+    "username": "4.0.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "3.0.1",
